<resources>
    <string name="app_name">Server app</string>

    <string name="success_data">Success: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="for_you">Dành cho bạn</string>
    <string name="finance">Tài chính</string>
    <string name="following">Đang theo dõi</string>
    <string name="kiosk">Quầy báo</string>
    <string name="logo">Logo</string>
    <string name="search">Search</string>
    <string name="empty_data">Empty data</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="time_publish">Thời gian đăng</string>
    <string name="content_of_post">Nội dung bài viết</string>
    <string name="source_of_post">Nguồn bài viết</string>
    <string name="title_of_post">Tiêu đề bài viết</string>
    <string name="icon_of_website">Icon of website</string>
</resources>