<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <!-- Toolbar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:contentInsetStart="0dp"
        app:title="">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="16dp">

            <!-- Search Icon -->
            <ImageView
                android:id="@+id/ivSearch"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/search"
                android:src="@drawable/ic_search"
                app:tint="@color/white" />

            <!-- Center Icon -->
            <ImageView
                android:id="@+id/ivLogo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/logo"
                android:scaleType="center"
                android:src="@drawable/ic_server" />

            <!-- Profile Icon -->
            <ImageView
                android:id="@+id/ivProfile"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/profile"
                android:src="@drawable/ic_bomb"
                app:tint="@color/white" />
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <!-- Fragment Container -->
    <FrameLayout
        android:id="@+id/mainSerContainerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_marginBottom="?attr/actionBarSize"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        />

    <!--<androidx.fragment.app.FragmentContainerView
        android:id="@+id/mainSerContainerView"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_marginBottom="56dp"
        app:defaultNavHost="true"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:navGraph="@navigation/nav_ser" />-->

    <!-- Bottom Navigation -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/mainBottomNavigation"
        style="@style/Widget.MaterialComponents.BottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="?attr/colorSurface"
        android:paddingVertical="16dp"
        app:itemIconSize="24dp"
        app:labelVisibilityMode="labeled"
        app:menu="@menu/menu_bottom_nav" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>